--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_CONNECTION_STRING = "mongodb+srv://admin:admin%40123@cluster0.hqzc1wy.mongodb.net/course-app"
+MONGODB_CONNECTION_STRING = "YOUR-MONGODB-CONNECTION-STRING"
